<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_view"
    android:backgroundTint="?attr/colorPrimary"
    android:paddingHorizontal="@dimen/s"
    android:layout_margin="@dimen/m"
    tools:context=".views.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:src="@drawable/ic_logo_t_w"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/s"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:gravity="center" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xl"
                android:layout_marginTop="@dimen/s"
                android:hint="@string/email"
                android:textColorHint="?attr/colorOnPrimary"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserrat_regular"
                android:background="@drawable/text_form"
                android:paddingHorizontal="@dimen/s" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xl"
                android:layout_marginTop="@dimen/s"
                android:hint="@string/password"
                android:textColorHint="?attr/colorOnPrimary"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:background="@drawable/text_form"
                android:paddingHorizontal="@dimen/s"
                android:fontFamily="@font/montserrat_regular" />

            <TextView
                android:id="@+id/tv_rec_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xl"
                android:layout_marginTop="@dimen/s"
                android:layout_gravity="end"
                android:text="@string/get_password"
                android:gravity="end|center"
                android:textColor="?attr/colorOnPrimary" />

            <Button
                android:id="@+id/b_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s"
                android:backgroundTint="@color/bg_button"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/sign_in"
                android:fontFamily="@font/montserrat_semibold"
                android:enabled="false"
                app:strokeColor="?attr/colorOnPrimary"
                app:strokeWidth="0.5dp"
                app:shapeAppearance="@style/RoundedPhoto"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:alpha="0.5"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/b_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/b_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimaryDark"
        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="0.5dp"
        app:shapeAppearance="@style/RoundedBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>