<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity">

    <RelativeLayout
        android:id="@+id/bar_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/l"
            android:layout_height="@dimen/l"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/tv_profile"
            app:layout_constraintEnd_toStartOf="@+id/tv_profile"/>

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:layout_toEndOf="@id/ib_back"
            android:layout_toStartOf="@id/ib_settings"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/f_l"
            android:fontFamily="@font/montserrat_bold"/>

        <ImageButton
            android:id="@+id/ib_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m"
        android:padding="@dimen/s"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_profile"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_logo_t_w"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@id/ll_signup"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/signup_m"
                        android:textSize="30sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="?attr/colorOnPrimary" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/t_i"
                        android:layout_marginTop="@dimen/s"
                        android:paddingHorizontal="@dimen/s"
                        android:background="@drawable/text_form"
                        android:inputType="textPersonName"
                        android:hint="@string/name"
                        android:textColorHint="?attr/colorOnPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:fontFamily="@font/montserrat_regular"
                        android:digits="abcdefghijklmnñopqrstuvwxyzáéíóúABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ"
                        android:imeOptions="actionNext"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/t_i"
                        android:layout_marginTop="@dimen/s"
                        android:paddingHorizontal="@dimen/s"
                        android:background="@drawable/text_form"
                        android:hint="@string/email"
                        android:textColorHint="?attr/colorOnPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_phone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/xl"
                        android:layout_marginTop="@dimen/s"
                        android:paddingHorizontal="@dimen/s"
                        android:background="@drawable/text_form"
                        android:hint="@string/phone"
                        android:textColorHint="?attr/colorOnPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="number"
                        android:maxLength="10"
                        android:imeOptions="actionNext"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/t_i"
                        android:layout_marginTop="@dimen/s"
                        android:paddingHorizontal="@dimen/s"
                        android:background="@drawable/text_form"
                        android:hint="@string/password"
                        android:textColorHint="?attr/colorOnPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_conf_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/t_i"
                        android:layout_marginTop="@dimen/s"
                        android:paddingHorizontal="@dimen/s"
                        android:background="@drawable/text_form"
                        android:hint="@string/conf_password"
                        android:textColorHint="?attr/colorOnPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/s"
                        android:indeterminate="false"
                        android:indeterminateTint="?attr/colorOnPrimary"
                        android:visibility="gone"
                        android:max="100"
                        android:progress="10" />

                    <Button
                        android:id="@+id/b_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/s"
                        android:backgroundTint="@color/bg_button"
                        android:textColor="?attr/colorOnPrimary"
                        android:text="@string/sign_up"
                        android:fontFamily="@font/montserrat_semibold"
                        android:enabled="false"
                        app:strokeColor="?attr/colorOnPrimary"
                        app:strokeWidth="0.5dp"
                        app:shapeAppearance="@style/RoundedPhoto"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/s"
                    android:gravity="center|bottom"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_signup"
                    app:layout_constraintVertical_bias="1.0">

                    <TextView
                        android:id="@+id/tv_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/xs"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/huellitas"
                        android:textAllCaps="true"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/f_m" />

                    <TextView
                        android:id="@+id/tv_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/team"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/f_s" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>